kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app

spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    
    spec:
      containers:
        - name: test-app-container
          image: test-app
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
