kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 5000
  selector:
    app: test-app
